Closed Bug 1033124 Opened 11 years ago Closed 11 years ago

YCbCr->RGB conversions use incorrect coefficients

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

Attachments

(2 files)

Attached file rec601.py
In investigating bug 814524, I found that our shaders for YCbCr->RGB conversion use inaccurate coefficients. I created a Python script which takes the RGB luma coefficients from Rec601 (SDTV YCbCr), and generated first the RGB->YCbCr matrix, then inverting it to get the YCbCr->RGB matrix.
Attached patch rec601Splinter Review
Attachment #8449114 - Flags: review?(matt.woodrow)
Attachment #8449114 - Flags: review?(bas)
Comment on attachment 8449114 [details] [diff] [review] rec601 Review of attachment 8449114 [details] [diff] [review]: ----------------------------------------------------------------- I doubt this'll change practical output, but sure! :)
Attachment #8449114 - Flags: review?(bas) → review+
Attachment #8449114 - Flags: review?(matt.woodrow) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
See Also: → 814524
See Also: → 1210357
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: