Bug 1033124 - Use correct and more precise coeffs for YCbCr->RGB conversion. - r=mattwoodrow,r=bas